# RackVisio

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: accounts.py  auth.py  consumables.py  devices.py  interfaces.py  links.py  meta.py  mount_records.py  racks.py  rooms.py  stats.py  topology.py
backend/app/core/: cache.py  config.py  database.py  deps.py  enums.py  exceptions.py  ip_conflict.py  meta.py  rbac.py  security.py
backend/app/db/: __init__.py  init_db.py
backend/app/models/: __init__.py  consumable.py  device.py  interface.py  link.py  mount_record.py  rack.py  room.py  user.py
backend/app/repositories/: consumable_repo.py  device_repo.py  interface_repo.py  link_repo.py  mount_record_repo.py  rack_repo.py  room_repo.py  user_repo.py
backend/app/schemas/: account.py  common.py  consumable.py  device.py  interface.py  link.py  mount_record.py  rack.py  room.py  stats.py
backend/app/services/: consumable_service.py  dashboard_service.py  device_service.py  interface_service.py  link_service.py  rack_service.py  room_service.py  stats_service.py  topology_service.py
backend/tests/: conftest.py  e2e_smoke.py  frontend_check.py  test_qa_edge.py  test_smoke.py
docs/: API.md  DEPLOY.md
frontend/: .dockerignore  .npmrc  Dockerfile  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
(+133 files in other folders)
